--- a/clients/users/templates/users/base.html
+++ b/clients/users/templates/users/base.html
@@ -45,7 +45,7 @@
     <!-- load font -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link href="https://fonts.googleapis.com/css2?family=Agbalumo&family=Flow+Circular&display=swap" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css2?family=Agbalumo&family=Flow+Circular&family=DM+Serif+Display&display=swap" rel="stylesheet" />
 
     <!-- load bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous" />
@@ -56,11 +56,7 @@
     <link rel="stylesheet" href="{% static 'users/styles/background.css' %}" />
     <link rel="stylesheet" href="{% static 'users/styles/body.css' %}" />
     <link rel="stylesheet" href="{% static 'users/styles/footer.css' %}" />
-
-    <!-- load font -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=DM+Serif+Display&display=swap" rel="stylesheet">
+    <!-- TODO: Dynamically switch between light and dark mode using js -->
 
     <!-- load chart.js -->
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
