--- a/clients/users/templates/users/dashboard.html
+++ b/clients/users/templates/users/dashboard.html
@@ -2,99 +2,145 @@
 {% load static %}
 {% load accounts_tags %}
 {% block content %}
-{% include 'users/includes/header.html' %}
-<main class="float-end">
-  <div>
-    {% if request.user.account_set.all %}
-    <div class="dashboard">
-      <div>
-        <div class="quick-transaction">
-          <button class="transfer rounded-1 p-2 fw-semibold shadow-sm">Quick Transfer</button>
-          <button class="deposit rounded-1 p-2 fw-semibold shadow-sm">Quick deposit</button>
-        </div>
-        <div
-          class="account-cards border border-black w-73 bg-white rounded-4 shadow mt-5 d-flex flex-column justify-content-evenly">
-          <div class="mx-5 d-flex justify-content-between">
-            <span class="text-secondary fs-6 fw-light">Available balance</span>
-            <span class="fs-6">{{ request.session.account.account_type }}</span>
+  {% include 'users/includes/header.html' %}
+  <main class="float-end">
+    <div>
+      {% if request.user.account_set.all %}
+        <div class="dashboard">
+          <div>
+            <div class="quick-transaction">
+              <button class="transfer rounded-1 p-2 fw-semibold shadow-sm">Quick Transfer</button>
+              <button class="deposit rounded-1 p-2 fw-semibold shadow-sm">Quick deposit</button>
+            </div>
+            
+            <div class="account-cards border border-black w-73 bg-white rounded-4 shadow mt-5 d-flex flex-column justify-content-evenly">
+              <div class="mx-5 d-flex justify-content-between">
+                <span class="text-secondary fs-6 fw-light">Available balance</span>
+                <span class="fs-6">{{ request.session.account.account_type }}</span>
+              </div>
+              <div class="mx-5 fs-2 account-balance">{{ request.session.account.currency|currency_to_unicode|safe }}{{ request.session.account.balance }}</div>
+              <div class="mx-5 account-number">{{ request.session.account.number }}</div>
+            </div>
+
+            <div class="transaction-chart d-flex flex-column w-100 mt-5">
+              <canvas id="transactionLineChart" class="border border-black"></canvas>
+              <canvas id="transactionTypePieChart" class="border border-black"></canvas>
+            </div>
           </div>
-          <div class="mx-5 fs-2 account-balance">{{ request.session.account.currency|currency_to_unicode|safe }}{{ request.session.account.balance }}</div>
-          <div class="mx-5 account-number">{{ request.session.account.number }}</div>
-        </div>
-        <div class="transaction-chart">
-          <canvas id="transactionLineChart" width="800" height="400"></canvas>
-          <canvas id="transactionTypePieChart" width="400" height="400"></canvas>
-        </div>
-      </div>
-      <div>
-        <div class="financial-overviews d-flex gap-5">
-          <span id="income" class="rounded-2 shadow bg-white d-flex flex-column justify-content-evenly ps-3">
-            <div>Income</div>
-            <div class="no_deposit fw-semibold fs-6">{{ request.session.account.currency|currency_to_unicode|safe }}{{ financial.incoming }}</div>
-            <div class="deposit fw-semibold fs-6">{{ request.session.account.currency|currency_to_unicode|safe }}{{ financial.incoming_2 }}</div>
-          </span>
-          <span id="spending" class=" rounded-2 shadow bg-white d-flex flex-column justify-content-evenly ps-3">
-              <div>Expenses</div>
-              <div class="fw-semibold fs-6">{{ request.session.account.currency|currency_to_unicode|safe }}{{ financial.outgoing }}</div>
-          </span>
-        </div>
-        <div class="transaction-partners mt-4">
-          <h2>Send money to</h2>
-          <div class="partners d-flex my-3">
-            {% for partner in top_partners %}
-              <span class="center justify-content-start" >
-                <img src="{{ partner.transaction_partner_account.user.profile_picture.url  }}" alt="{{ partner.transaction_partner_account.user.get_full_name }} profile image" class="rounded-pill overflow-hidden profile-glow me-2">
-                <span>
-                  <div class="fw-bold fs-6">{{ partner.transaction_partner_account.user.get_full_name }}</div>
-                  <div><span class="fw-semibold">Acct No.: </span>{{ partner.transaction_partner_account.number }}</div>
-                </span>
+          <div>
+            <div class="financial-overviews d-flex gap-5">
+              <span id="income" class="rounded-2 shadow bg-white d-flex flex-column justify-content-evenly ps-3">
+                <div>Income</div>
+                <div class="no_deposit fw-semibold fs-6">{{ request.session.account.currency|currency_to_unicode|safe }}{{ financial.incoming }}</div>
+                <div class="deposit fw-semibold fs-6">{{ request.session.account.currency|currency_to_unicode|safe }}{{ financial.incoming_2 }}</div>
               </span>
-            {% endfor %}
-          </div>
-        </div>
-        <div class="recent-transactions">
-          <h2>Recent Transactions</h2>
-          <div class="transactions">
-            <div>
-              <img src="/static/users/images/deposits.png" alt="">
-              <span>
-                <span>JJon Klenn</span>
-                <span>15min ago</span>
-              </span>
-              <span>
-                <div>$900</div>
-                <div>
-                  <span>ID: </span> 58h3488ht83h8t834hg48g5ybbgr
-                </div>
+              <span id="spending" class="rounded-2 shadow bg-white d-flex flex-column justify-content-evenly ps-3">
+                <div>Expenses</div>
+                <div class="fw-semibold fs-6">{{ request.session.account.currency|currency_to_unicode|safe }}{{ financial.outgoing }}</div>
               </span>
             </div>
-            {% comment %} {% for transaction in recent_transactions %}
-              {% if transaction.transaction_type == 'TRANSFER' %}
-                  {{ transaction.transaction_type }} 
-                  {{ transaction.transfer.transaction_partner_account }} <br>
-              {% elif transaction.transaction_type == 'DEBIT_CARD' %}
-                {{ transaction.transaction_type }} 
-                {{ transaction.debit_card.transaction_partner_account }} <br>
-              {% else %}
-                {{ transaction.transaction_type }} <br>
-              {% endif %}
-            {% endfor %} {% endcomment %}
+
+            {% if top_partners.all|length > 0 %}
+              <div class="transaction-partners mt-4">
+                <h2>Send money to</h2>
+                <div class="partners d-flex mt-3">
+                  {% for partner in top_partners %}
+                    <span class="center justify-content-start">
+                      <img src="{{ partner.transaction_partner_account.user.profile_picture.url }}" alt="{{ partner.transaction_partner_account.user.get_full_name }} profile image" class="rounded-pill overflow-hidden profile-glow me-2" />
+                      <span>
+                        <div class="fw-bold fs-6">{{ partner.transaction_partner_account.user.get_full_name }}</div>
+                        <div>
+                          <span class="fw-semibold">Acct No.:</span>{{ partner.transaction_partner_account.number }}
+                        </div>
+                      </span>
+                    </span>
+                  {% endfor %}
+                </div>
+              </div>
+            {% endif %}
+
+            {% if recent_transactions.all|length > 0 %}
+              <div class="recent-transactions mt-3">
+                <h2>Recent Transactions</h2>
+                <div class="d-flex transactions column-gap-2">
+                  {% for transaction in recent_transactions %}
+                    <div class="d-flex justify-content-around align-items-center rounded-3">
+                      {% if transaction.transaction_type == 'TRANSFER' %}
+                        <span class="d-flex align-items-center">
+                          <div class="bg-white rounded-1 me-2">
+                            <img src="/static/users/images/transfers.png" alt="" class="mx-2" />
+                          </div>
+                          <div>
+                            {% if transaction.account.pk == request.session.account.pk %}
+                              <div class="fw-semibold">{{ transaction.transfer.transaction_partner_account.user.get_full_name }}</div>
+                            {% else %}
+                              <div class="fw-semibold">{{ transaction.account.user.get_full_name }}</div>
+                            {% endif %}
+                            <div class="time">{{ transaction.date|timesince }}</div>
+                          </div>
+                        </span>
+                        <span>
+                          {% if transaction.account.pk == request.session.account.pk %}
+                            <div class="text-end">-{{ transaction.amount }}</div>
+                          {% else %}
+                            <div class="text-end">+{{ transaction.amount }}</div>
+                          {% endif %}
+                          <div class="text-end id">{{ transaction.get_transaction_type_display }}</div>
+                        </span>
+                      {% elif transaction.transaction_type == 'DEBIT_CARD' %}
+                        <span class="d-flex align-items-center">
+                          <div class="bg-white rounded-1 me-2">
+                            <img src="/static/users/images/debit_card.png" alt="" class="mx-2" />
+                          </div>
+                          <div>
+                            {% if transaction.account.pk == request.session.account.pk %}
+                              <div class="fw-semibold">{{ transaction.debit_card.transaction_partner_account.user.get_full_name }}</div>
+                            {% else %}
+                              <div class="fw-semibold">{{ transaction.account.user.get_full_name }}</div>
+                            {% endif %}
+                            <div class="time">{{ transaction.date|timesince }}</div>
+                          </div>
+                        </span>
+                        <span>
+                          {% if transaction.account.pk == request.session.account.pk %}
+                            <div class="text-end">+{{ transaction.amount }}</div>
+                          {% else %}
+                            <div class="text-end">-{{ transaction.amount }}</div>
+                          {% endif %}
+                          <div class="text-end id">{{ transaction.get_transaction_type_display }}</div>
+                        </span>
+                      {% else %}
+                        <span class="d-flex align-items-center">
+                          <div class="bg-white rounded-1 me-2">
+                            <img src="/static/users/images/deposits.png" alt="" class="mx-2" />
+                          </div>
+                          <div>
+                            <div class="fw-semibold">{{ transaction.account.user.get_full_name }}</div>
+                            <div class="time">{{ transaction.date|timesince }}</div>
+                          </div>
+                        </span>
+                        <span>
+                          <div class="text-end">+{{ transaction.amount }}</div>
+                          <div class="text-end type">{{ transaction.get_transaction_type_display }}</div>
+                        </span>
+                      {% endif %}
+                    </div>
+                  {% endfor %}
+                </div>
+              </div>
+            {% endif %}
           </div>
         </div>
-      </div>
+      {% else %}
+        <p class="text-success">
+          Welcome!, <span class="fs-3 fw-bold">{{ request.user.get_full_name }}</span>
+        </p>
+        <p class="text-center fs-3 my-5">Now that you're part of our community, let's ensure you have a smooth experience while testing transactions and exploring our features.</p>
+        <p class="text-center fs-2 fw-semibold m-5">Click the button below to Create an Account.</p>
+        <div id="welcome-create-account-btn" class="m-auto center border rounded-pill bg-success text-white text-center">Create Account</div>
+      {% endif %}
     </div>
-    {% else %}
-    <p class="text-success">
-      Welcome!, <span class="fs-3 fw-bold">{{ request.user.get_full_name }}</span>
-    </p>
-    <p class="text-center fs-3 my-5">Now that you're part of our community, let's ensure you have a smooth experience
-      while testing transactions and exploring our features.</p>
-    <p class="text-center fs-2 fw-semibold m-5">Click the button below to Create an Account.</p>
-    <div id="welcome-create-account-btn" class="m-auto center border rounded-pill bg-success text-white text-center">
-      Create Account</div>
-    {% endif %}
-  </div>
-</main>
-{% include 'users/includes/footer.html' %}
-<script type="module" src="{% static 'users/scripts/dashboard.js' %}"></script>
+  </main>
+  {% include 'users/includes/footer.html' %}
+  <script type="module" src="{% static 'users/scripts/dashboard.js' %}"></script>
 {% endblock %}
