--- a/clients/users/static/users/styles/body.css
+++ b/clients/users/static/users/styles/body.css
@@ -87,9 +87,46 @@ main {
     width: 50px;
 }
 
-.transaction-partners .partners {
+.transaction-partners .partners, .recent-transactions .transactions {
     column-gap: 150px;
     row-gap: 20px;
     flex-wrap: wrap;
     cursor: pointer;
+}
+
+.recent-transactions .transactions > div {
+    color: #F4F0FD;
+    font-size: 13px;
+    font-family: 'Times New Roman', Times, serif;
+    background-color: #5E3FBE;
+    width: 280px;
+    height: 65px;
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.514);
+    transition: all 0.3s ease-in-out;
+}
+
+.recent-transactions .transactions div img {
+    height: 18px;
+    aspect-ratio: 1;
+}
+
+.recent-transactions .transactions div :is(.type, .time) {
+    font-size: 10px;
+}
+
+.recent-transactions .transactions > div:hover {
+    box-shadow: 0 0 10px black;
+    border: 2px solid maroon;
+    transform: scale(1.1);
+}
+
+.transaction-chart {
+
+}
+#transactionLineChart {
+    width: 100%;
+    height: 100%;
+}
+#transactionTypePieChart {
+    height: 50%;
 }
