--- a/clients/users/templates/users/includes/header.html
+++ b/clients/users/templates/users/includes/header.html
@@ -10,15 +10,13 @@
     <fieldset class="form-group">
       <legend class="border-bottom mb-4">Create Account</legend>
       <div id="div_account_type" class="mb-3">
-        <label for="account_type" class="form-label">Account type</label> <select name="account_type"
-          class="select form-select" id="account_type">
+        <label for="account_type" class="form-label">Account type</label> <select name="account_type" class="select form-select" id="account_type">
           <option value="SAVINGS" selected>Savings</option>
           <option value="CURRENT">Current</option>
         </select>
       </div>
       <div id="div_currency" class="mb-3">
-        <label for="currency" class="form-label">Currency</label> <select name="currency" class="select form-select"
-          id="currency">
+        <label for="currency" class="form-label">Currency</label> <select name="currency" class="select form-select" id="currency">
           <option value="USD">USD</option>
           <option value="EUR">EUR</option>
           <option value="GBP">GBP</option>
@@ -33,54 +31,46 @@
   </form>
 </aside>
 
-<aside
-  class="main-nav border-end d-flex flex-column align-items-center justify-content-between py-4 border-success position-fixed">
+<aside class="main-nav border-end d-flex flex-column align-items-center justify-content-between py-4 border-success position-fixed">
   <a href="#"><img src="{% static 'users/images/home.png' %}" alt="home" class="icon" title="home" /></a>
   <a href="#"><img src="{% static 'users/images/deposits.png' %}" alt="deposits" class="icon" title="deposits" /></a>
   <a href="#"><img src="{% static 'users/images/transfers.png' %}" alt="transfers" class="icon" title="transfers" /></a>
-  <a href="#"><img src="{% static 'users/images/debit_card.png' %}" alt="debit card" class="icon"
-      title="debit_card" /></a>
-  <a href="#"><img src="{% static 'users/images/transactions.png' %}" alt="transactions" class="icon"
-      title="transactions" /></a>
+  <a href="#"><img src="{% static 'users/images/debit_card.png' %}" alt="debit card" class="icon" title="debit_card" /></a>
+  <a href="#"><img src="{% static 'users/images/transactions.png' %}" alt="transactions" class="icon" title="transactions" /></a>
   <a href="#"><img src="{% static 'users/images/history.png' %}" alt="history" class="icon" title="history" /></a>
-  <a href="#"><img src="{% static 'users/images/notifications.png' %}" alt="notifications" class="icon"
-      title="notifications" /></a>
+  <a href="#"><img src="{% static 'users/images/notifications.png' %}" alt="notifications" class="icon" title="notifications" /></a>
 </aside>
-<header class="site-header px-3 d-flex flex-row justify-content-between align-items-center position-fixed w-100 mt-2">
+<header class="site-header px-3 d-flex flex-row justify-content-between align-items-center position-fixed w-100">
   <div class="d-flex align-items-center">
     <span>
       <img src="{% static 'users/images/accounts.png' %}" alt="accounts" class="accounts hover-pointer" title="account" />
       <div class="accounts-list position-absolute bg-body-tertiary border rounded-1 shadow-sm">
         <div class="d-flex flex-column">
           {% for account in request.user.account_set.all %}
-          {% if account.name != request.session.account.name %}
-          <div
-            class="d-flex justify-content-between align-items-center hover-pointer account-details w-100 p-2 rounded-1">
-            <a href="{% url 'accounts:switch_account' account.pk %}"
-              class="account-name fw-semibold text-decoration-none text-black">{{ account.name }}</a> - <span
-              class="account-balance">{{ account.currency|currency_to_unicode|safe }}{{ account.balance }}</span>
-            <!-- account lists -->
-          </div>
-          <hr class="mx-0 my-0" />
-          {% endif %}
+            {% if account.name != request.session.account.name %}
+              <div class="d-flex justify-content-between align-items-center hover-pointer account-details w-100 p-2 rounded-1">
+                <a href="{% url 'accounts:switch_account' account.pk %}" class="account-name fw-semibold text-decoration-none text-black">{{ account.name }}</a> - <span class="account-balance">{{ account.currency|currency_to_unicode|safe }}{{ account.balance }}</span>
+                <!-- account lists -->
+              </div>
+              <hr class="mx-0 my-0" />
+            {% endif %}
           {% endfor %}
-          <div
-            class="d-flex justify-content-between align-items-center hover-pointer account-details w-100 p-2 rounded-1">
-            <span><input type="text" class="bg-transparent border-none account_name fw-lighter add-account"
-                placeholder="+" /></span> <!--add account number-->
+          <div class="d-flex justify-content-between align-items-center hover-pointer account-details w-100 p-2 rounded-1">
+            <span><input type="text" class="bg-transparent border-none account_name fw-lighter add-account" placeholder="+" /></span> <!-- add account number -->
           </div>
         </div>
       </div>
     </span>
     <span>
       <div id="account-id" class="d-none">{{ request.session.account.pk }}</div> <!-- account id -->
-      <input type="text"
-        class="bg-transparent border-none account_name fw-lighter {% if request.session.account.name %} rename-account {% else %} add-account {% endif %}"
-        value="{{ request.session.account.name }}" placeholder="+" />
+      {% if request.session.account.name %}
+        <input type="text" class="bg-transparent border-none account_name fw-lighter rename-account" value="{{ request.session.account.name }}" placeholder="+" />
+      {% else %}
+        <input type="text" class="bg-transparent border-none account_name fw-lighter add-account" value="{{ request.session.account.name }}" placeholder="+" />
+      {% endif %}
     </span>
-
   </div>
-  <div class="searchbar rounded-pill p-2 h-75 w-50 d-flex align-items-center">
+  <div class="searchbar rounded-pill p-2 w-50 d-flex align-items-center">
     <img src="{% static 'users/images/searchicon.png' %}" alt="search icon" class="search" />
     <input type="text" class="rounded-end-pill w-100 border-none bg-transparent" /> <!-- search bar -->
   </div>
@@ -90,33 +80,24 @@
     <div>
       <img src="{% static 'users/images/notification.png' %}" alt="notification" class="notification-icon icon" title="notification" />
       {% if unread_count > 0 %}
-      <span class="position-relative notification-icon">
-        <div
-          class="position-absolute notification-count rounded-circle bg-danger text-white d-flex justify-content-center align-items-center">
-          {{ unread_count }}
-        </div> <!-- unread notification count -->
-      </span>
-      <span class="position-relative unread-notifications">
-        <span class="position-absolute bg-white shadow-lg p-3 rounded-2">
-          {% for note in unread_note %}
-          <div
-            class="unread-notification mb-2 pb-2">
-            <div class="unread_notification_id d-none">
-              {{ note.pk }}
-            </div>
-            <div class="fw-lighter">{{ note.content }}</div>
-            <div>
-              <span>{{ note.get_notification_type_display }}</span> - 
-              <span>{{ note.created_date | timesince }} ago</span>
-            </div>
-         </div> <!-- unread notification count -->
+        <span class="position-relative notification-icon"><div class="position-absolute notification-count rounded-circle bg-danger text-white d-flex justify-content-center align-items-center">{{ unread_count }}</div> <!-- unread notification count --></span>
+        <span class="position-relative unread-notifications">
+          <span class="position-absolute bg-white shadow-lg p-3 rounded-2">
+            {% for note in unread_note %}
+              <div class="unread-notification mb-2 pb-2">
+                <div class="unread_notification_id d-none">{{ note.pk }}</div>
+                <div class="fw-lighter">{{ note.content }}</div>
+                <div>
+                  <span>{{ note.get_notification_type_display }}</span> -
+                  <span>{{ note.created_date|timesince }}</span>
+                </div>
+              </div> <!-- unread notification count -->
             {% endfor %}
+          </span>
         </span>
-      </span>
       {% endif %}
     </div>
-    <a href="#" class="bg-body-tertiary rounded-pill overflow-hidden profile profile-glow"><img
-        src="{{ request.user.profile_picture.url }}" alt="profile" class="profile-image" title="profile" /></a>
+    <a href="#" class="bg-body-tertiary rounded-pill overflow-hidden profile profile-glow"><img src="{{ request.user.profile_picture.url }}" alt="profile" class="profile-image" title="profile" /></a>
     <!-- profile -->
   </div>
 </header>
