Transaction Chart Version one

--- a/clients/users/static/users/styles/body.css
+++ b/clients/users/static/users/styles/body.css
@@ -120,13 +120,6 @@ main {
     transform: scale(1.1);
 }
 
-.transaction-chart {
-
-}
-#transactionLineChart {
-    width: 100%;
-    height: 100%;
-}
-#transactionTypePieChart {
-    height: 50%;
+#transactionChart {
+    width: 90%;
 }
