--- a/clients/users/templates/users/base.html
+++ b/clients/users/templates/users/base.html
@@ -59,7 +59,7 @@
     <!-- TODO: Dynamically switch between light and dark mode using js -->
 
     <!-- load chart.js -->
-    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/apexcharts" defer></script>
   </head>
   <body>
       {% block content %}
