--- a/clients/users/templates/users/dashboard.html
+++ b/clients/users/templates/users/dashboard.html
@@ -4,6 +4,35 @@
 {% block content %}
   {% include 'users/includes/header.html' %}
   <main class="float-end">
+
+    <aside class="account-form d-none">
+      <form method="POST" class="border border-primary px-5 py-2 shadow p-3 mb-5 bg-body-tertiary rounded">
+        {% csrf_token %}
+        <fieldset class="form-group">
+          <legend class="border-bottom mb-4">Send Account</legend>
+          <div id="div_account_type" class="mb-3">
+            <label for="account_type" class="form-label">Account type</label> <select name="account_type" class="select form-select" id="account_type">
+              <option value="SAVINGS" selected>Savings</option>
+              <option value="CURRENT">Current</option>
+            </select>
+          </div>
+          <div id="div_currency" class="mb-3">
+            <label for="currency" class="form-label">Currency</label> <select name="currency" class="select form-select" id="currency">
+              <option value="USD">USD</option>
+              <option value="EUR">EUR</option>
+              <option value="GBP">GBP</option>
+              <option value="NGN" selected>NGN</option>
+            </select>
+          </div>
+
+          <div class="form-group mb-3">
+            <button class="btn btn-outline-info w-100" id="create-account-btn" type="button">Transfer</button>
+            <button class="btn btn-outline-info w-100" id="create-account-btn" type="button">Deposit</button>
+          </div>
+        </fieldset>
+      </form>
+    </aside>
+
     <div>
       {% if request.user.account_set.all %}
         <div class="dashboard">
@@ -13,7 +42,7 @@
               <button class="transfer rounded-1 p-2 fw-semibold shadow-sm">Quick Transfer</button>
               <button class="deposit rounded-1 p-2 fw-semibold shadow-sm">Quick deposit</button>
             </div>
-            
+
             <!-- account status card -->
             <div class="account-cards border border-black w-73 bg-white rounded-4 shadow mt-5 d-flex flex-column justify-content-evenly">
               <div class="mx-5 d-flex justify-content-between">
@@ -25,7 +54,7 @@
             </div>
 
             <div class="transaction-chart d-flex flex-column w-100 mt-5">
-              <div id="transactionChart"></div> <!-- Transaction chart -->
+              <div id="transactionChart" class=""></div> <!-- Transaction chart -->
             </div>
           </div>
           <div>
