--- a/clients/users/static/users/styles/main.css
+++ b/clients/users/static/users/styles/main.css
@@ -39,3 +39,21 @@
     border: 1px solid #b70202;
     box-shadow: 0 0 5px #b70202;
 }
+
+aside.account-form {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.1);
+    z-index: 20;
+    overflow: hidden;
+}
+
+aside.account-form form {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
