--- a/clients/users/templates/users/includes/header.html
+++ b/clients/users/templates/users/includes/header.html
@@ -25,7 +25,7 @@
       </div>
 
       <div class="form-group mb-3">
-        <button class="btn btn-outline-info w-100" id="create-account-btn" type="button">Cancel</button>
+        <button class="btn btn-outline-info w-100" id="cancel-account-btn" type="button">Cancel</button>
         <button class="btn btn-outline-info w-100" id="create-account-btn" type="button">Create</button>
       </div>
     </fieldset>
