--- a/clients/users/templates/users/includes/header.html
+++ b/clients/users/templates/users/includes/header.html
@@ -24,8 +24,8 @@
         </select>
       </div>
 
-      <div class="form-group mb-3">
-        <button class="btn btn-outline-info w-100" id="cancel-account-btn" type="button">Cancel</button>
+      <div class="form-group mb-3 d-flex flex-row gap-1">
+        <button class="btn btn-outline-danger w-100 cancel-overlay-btn" id="cancel-account-btn" type="button">Cancel</button>
         <button class="btn btn-outline-info w-100" id="create-account-btn" type="button">Create</button>
       </div>
     </fieldset>
