--- a/clients/users/templates/users/dashboard.html
+++ b/clients/users/templates/users/dashboard.html
@@ -189,7 +189,7 @@
         </p>
         <p class="text-center fs-3 my-5">Now that you're part of our community, let's ensure you have a smooth experience while testing transactions and exploring our features.</p>
         <p class="text-center fs-2 fw-semibold m-5">Click the button below to Create an Account.</p>
-        <div id="welcome-create-account-btn" class="m-auto center border rounded-pill bg-success text-white text-center">Create Account</div>
+        <div id="welcome-create-account-btn" class="m-auto center border rounded-pill bg-success text-white text-center" style="cursor: pointer;">Create Account</div>
       {% endif %}
     </div>
   </main>
